@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- .dae/Collada reader/writer now handle whitespace in texture-filenames with escape characters (handle them as xs:anyURI).
 - Add function string::insert.
 - EditBox now still allows overwriting characters when the text-length is at max.
 - Bugfix: CMatrix4::transformPlane was calculating the wrong plane-normal before. 
@@ -9,7 +10,7 @@ Changes in 1.9 (not yet released)
 - Bugfix: CCameraSceneNode resets the IsOrthogonal flag to false now when it recalculates a projection matrix.
 - SViewFrustum::setFrom and SViewFrustum constructor now use a parameter to allow to set the correct near clipping plane when the projection matrix doesn't use a target depth range of 0 to z, but for example -z to z. So OGL projections matrices can now also use it.
 - Remove code to read boundingbox element in Collada reader as it's not in Collada specification.
-- .dae/Collade reader now converts from Collada's right-handed to Irrlicht's left handed coordinate system (switching z to -z)
+- .dae/Collada reader now converts from Collada's right-handed to Irrlicht's left handed coordinate system (switching z to -z)
 - Add irr::string::eraseTrailingFloatZeros to kick out trailing 0's for strings generated from floats.
 - .dae/Collada writer now converts from Irrlicht's left-handed to Collada's right-handed coordinate system (switching z to -z)
 - Switch Collada writer to utf8 xml's.
